--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,40 +1,64 @@
+/* line 1, ../sass/_general.sass */
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
+/* line 1, ../sass/_links.sass */
 .link {
   border: 1px solid red;
   margin-bottom: 10px;
-  height: 100px; }
-  .link .container {
-    float: left;
-    height: 100px; }
-    .link .container p {
-      width: 200px; }
-  .link .votings {
-    float: left; }
-    .link .votings .vote {
-      height: 30px;
-      width: 30px; }
-      .link .votings .vote.up {
-        background: green; }
-      .link .votings .vote.down {
-        background: orange; }
-  .link .delete {
-    float: left;
-    background: red;
-    width: 30px;
-    height: 30px; }
+  height: 100px;
+}
+/* line 6, ../sass/_links.sass */
+.link .container {
+  float: left;
+  height: 100px;
+}
+/* line 9, ../sass/_links.sass */
+.link .container p {
+  width: 200px;
+}
+/* line 12, ../sass/_links.sass */
+.link .votings {
+  float: left;
+}
+/* line 15, ../sass/_links.sass */
+.link .votings .vote {
+  height: 30px;
+  width: 30px;
+}
+/* line 19, ../sass/_links.sass */
+.link .votings .vote.up {
+  background: green;
+}
+/* line 22, ../sass/_links.sass */
+.link .votings .vote.down {
+  background: orange;
+}
+/* line 25, ../sass/_links.sass */
+.link .delete {
+  float: left;
+  background: red;
+  width: 30px;
+  height: 30px;
+}
 
+/* line 2, ../sass/_form.sass */
 form p {
-  background: lightgreen;
-  height: 25px; }
-  form p label {
-    float: left;
-    display: inline-block;
-    width: 100px; }
-  form p input {
-    float: left;
-    display: inline-block; }
+  background: greenyellow;
+  height: 25px;
+}
+/* line 5, ../sass/_form.sass */
+form p label {
+  float: left;
+  display: inline-block;
+  width: 100px;
+}
+/* line 10, ../sass/_form.sass */
+form p input {
+  float: left;
+  display: inline-block;
+}
 
 /*# sourceMappingURL=main.css.map */
