--- a/public/sass/_form.sass
+++ b/public/sass/_form.sass
@@ -1,12 +1,51 @@
 form
   p
-    background: greenyellow
     height: 25px
     label
       float: left
       display: inline-block
-      width: 100px
+      margin: 0 10px 0 0
+      color: #999
 
+  &.addLink
+    float: left
+    label
+      display: none
+
+  &.logout
+    position: absolute
+    bottom: 0
+    right: 0
+    margin-bottom: 14px
+    &:hover
+      input
+        background: rgba(255, 0, 0, 0.44)
+
+  &.login
     input
-      float: left
-      display: inline-block
+      margin: 40px auto 10px auto
+
+input
+  display: block
+  padding: 9px
+  border: 0
+  outline: 0
+  width: 300px
+  background: #FFF
+  margin: 0 0 20px 0
+  @include gradient-vertical(#FFF, #e9e9e9, 0%, 100%)
+  @include border-radius(3px)
+  text-align: center
+  font-size: 1.1rem
+
+  &:hover, &:focus
+    border-color: #C9C9C9
+
+  &[type="submit"]
+    width: auto
+    padding: 9px 15px
+    background: #617798
+    border: 0
+    color: #FFF
+    margin-top: 10px
+    font-size: 0.8rem
