--- a/public/sass/_general.sass
+++ b/public/sass/_general.sass
@@ -1,3 +1,22 @@
 *
   margin: 0
   padding: 0
+
+
+body
+  font-size: 16px
+  background: #e9e9e9
+
+#wrapper
+  width: 500px
+  margin: 0 auto
+
+  header
+    padding: 20px
+    height: 200px
+    position: relative
+    h1
+      font-size: 1.5rem
+      text-align: center
+      margin: 0 0 10px 0
+
