--- a/public/sass/_links.sass
+++ b/public/sass/_links.sass
@@ -1,29 +1,68 @@
-.link
-  border: 1px solid red
-  margin-bottom: 10px
-  height: 100px
+#allLinks
+  clear: both
 
-  .container
-    float: left
+  .link
+    border-top: 1px solid black
+    margin-bottom: 10px
     height: 100px
-    p
-      width: 200px
+    padding: 20px
+    position: relative
 
-  .votings
-    float: left
+    .date
+      position: absolute
+      top: 0
+      right: 0
+      margin: 10px
+      color: grey
+      font-size: 0.8rem
 
-    .vote
-      height: 30px
-      width: 30px
+    .container
+      float: left
+      height: 100px
 
-      &.up
-        background: green
+      h2
+        font-style: italic
+        margin: 0 0 10px 0
 
-      &.down
-        background: orange
+      p
+        margin: 0 0 20px 0
 
-  .delete
-    float: left
-    background: red
-    width: 30px
-    height: 30px
+
+
+    .votings
+      float: left
+      height: inherit
+      position: relative
+      width: 32px
+      margin: 0 30px 0 0
+
+      .vote
+        height: 32px
+        width: 32px
+
+
+        &.up
+          background: url('../img/s_arrow_up.png') no-repeat center center
+
+        &.down
+          position: absolute
+          bottom: 0
+          background: url('../img/s_arrow_down.png') no-repeat center center
+
+      .ranking
+        padding-top: 7px
+        text-align: center
+        vertical-align: middle
+        display: inline-block
+        height: 40px
+        width: 32px
+        font-size: 1.2rem
+        color: grey
+
+    .delete
+      position: absolute
+      bottom: 0
+      right: 0
+      margin: 20px
+      background-color: rgba(255, 0, 0, 0.59)
+
