--- a/public/sass/main.sass
+++ b/public/sass/main.sass
@@ -1,3 +1,5 @@
+@import "bootstrap/_variables.scss"
+@import "bootstrap/_mixins.scss"
 @import "_general.sass"
 @import "_links.sass"
 @import "_form.sass"
