--- a/public/sass/_links.sass
+++ b/public/sass/_links.sass
@@ -27,8 +27,6 @@
       p
         margin: 0 0 20px 0
 
-
-
     .votings
       float: left
       height: inherit
@@ -48,6 +46,9 @@
           position: absolute
           bottom: 0
           background: url('../img/s_arrow_down.png') no-repeat center center
+
+        &.disabled
+          opacity: 0.3
 
       .ranking
         padding-top: 7px
