--- a/public/sass/_form.sass
+++ b/public/sass/_form.sass
@@ -9,6 +9,8 @@ form
 
   &.addLink
     float: left
+    width: 100%
+
     label
       display: none
 
@@ -24,13 +26,16 @@ form
   &.login
     input
       margin: 40px auto 10px auto
+      width: 300px
+      &[type=submit]
+        width: auto
 
 input
   display: block
   padding: 9px
   border: 0
   outline: 0
-  width: 300px
+  width: 100%
   background: #FFF
   margin: 0 0 20px 0
   @include gradient-vertical(#FFF, #e9e9e9, 0%, 100%)
