--- a/public/sass/_form.sass
+++ b/public/sass/_form.sass
@@ -42,6 +42,8 @@ input
   @include border-radius(3px)
   text-align: center
   font-size: 1.1rem
+  &.error
+    border: 1px solid red
 
   &:hover, &:focus
     border-color: #C9C9C9
